[package]
name = "natro-macro"
version = "0.9.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs_metadata = "0.3.0"
notify-rust = "4.10.0"
once_cell = "1.19.0"
single-instance = "0.3.3"
app_dirs2 = "2.5.5"
anyhow = "1.0.77"
enigo = "0.2.0-rc2"